--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -13,6 +13,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-select": "^3.0.10",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "react-textfit": "^1.1.0",
@@ -29,6 +30,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.1.1",
-    "react-textfit": "^1.1.0"
+    "react-select": "^3.0.8",
+    "react-textfit": "^1.1.0",
+    "uuid": "^3.4.0"
   }
 }
