--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -5,28 +5,42 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html",
+    "start": "webpack-dev-server --config webpack.config.js --mode=development --history-api-fallback --hot",
+    "build": "webpack webpack.config.js",
     "lint": "tslint --project tsconfig.json"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@types/firebase": "^3.2.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/react-select": "^3.0.10",
+    "@types/webpack-env": "^1.15.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "fork-ts-checker-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^3.2.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "react-textfit": "^1.1.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
     "tslint-react": "^4.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "firebase": "^7.8.2",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.1.1",
