--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "yarn workspace ui start"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "firebase-tools": "^7.13.0",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
