--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -17,16 +17,20 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/theme-ui": "^0.3.0",
     "@types/webpack-env": "^1.15.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
     "html-webpack-plugin": "^3.2.0",
     "parcel-bundler": "^1.12.4",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "react-textfit": "^1.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "sugarss": "^2.0.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
@@ -39,6 +43,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@theme-ui/presets": "^0.3.0",
     "firebase": "^7.8.2",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
@@ -46,6 +51,7 @@
     "react-firebase-hooks": "^2.1.1",
     "react-select": "^3.0.8",
     "react-textfit": "^1.1.0",
+    "theme-ui": "^0.3.1",
     "uuid": "^3.4.0"
   }
 }
