--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js --mode=development --history-api-fallback --hot",
-    "build": "webpack webpack.config.js",
+    "build": "webpack",
     "lint": "tslint --project tsconfig.json"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/firebase": "^3.2.1",
+    "@types/node": "^13.7.4",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/theme-ui": "^0.3.0",
