--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -25,8 +25,10 @@
     "file-loader": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.4",
     "postcss-loader": "^3.0.0",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^1.19.1",
     "react-textfit": "^1.1.0",
     "source-map-loader": "^0.2.4",
@@ -44,8 +46,13 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@theme-ui/presets": "^0.3.0",
     "firebase": "^7.8.2",
+    "immer": "^6.0.3",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -53,6 +60,7 @@
     "react-select": "^3.0.8",
     "react-textfit": "^1.1.0",
     "theme-ui": "^0.3.1",
+    "use-immer": "^0.4.0",
     "uuid": "^3.4.0"
   }
 }
