Oops I haven't commited in a while

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/theme-ui": "^0.3.0",
     "@types/webpack-env": "^1.15.1",
     "babel-loader": "^8.0.6",
@@ -53,10 +55,13 @@
     "@theme-ui/presets": "^0.3.0",
     "firebase": "^7.8.2",
     "immer": "^6.0.3",
+    "immer-to-firestore": "^1.0.2",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-select": "^3.0.8",
     "react-textfit": "^1.1.0",
     "theme-ui": "^0.3.1",
